@@ -11,6 +11,7 @@ SecureServ Module for NeoStats Changelog.
  - Changed to use new module export API (M)
  - Added missing NULL checks for finduser results to avoid referencing NULL pointers (M)
  - Renamed output module to secureserv to fix load/unload issues (M)
+ - Don't do onjoin checks for channels monitored via a monbot (F)
 
 0.9.4 - Fish - 20 Aug, 2003
  - configure now checks for crypt.h (BugID: 37)
